--- a/Decision Tree.ipynb
+++ b/Decision Tree.ipynb
@@ -2,23 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import time\n",
+    "\n",
+    "\n",
     "dataset = pd.read_csv(r'hackathon_basketball_distribution.csv')\n",
     "\n",
     "shotTypes = dataset.complexShotType.unique()\n",
-    "\n",
     "shotIds = [i for i in range(len(shotTypes))]\n",
+    "\n",
     "dataset['complexShotType'].replace(shotTypes, shotIds, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -223,15 +226,29 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "training_data = dataset.sample(frac=0.8, random_state=25)\n",
-    "testing_data = dataset.drop(training_data.index)\n",
-    "dataset.head()"
+    "df1 = dataset.sample(frac=0.5, random_state=int(time.time()))\n",
+    "df2 = dataset.drop(df1.index)\n",
+    "dataset.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_cols = ['startGameClock', 'shotClock', 'distance', 'dribblesBefore', 'assistOpp', 'complexShotType', 'closestDefDist', 'rearViewContest', 'shotAngle', 'shooterSpeed', 'shooterVelAngle']\n",
+    "x1 = df1.loc[:, feature_cols]\n",
+    "x2 = df2.loc[:, feature_cols]\n",
+    "\n",
+    "y1 = df1['fg3']\n",
+    "y2 = df2['fg3']"
    ]
   },
   {
@@ -240,29 +257,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_cols = ['startGameClock', 'shotClock', 'distance', 'dribblesBefore', 'assistOpp', 'complexShotType', 'closestDefDist', 'rearViewContest', 'shotAngle', 'shooterSpeed', 'shooterVelAngle']\n",
-    "X = training_data.loc[:, feature_cols]\n",
-    "\n",
-    "Y = training_data['fg3']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from sklearn import tree\n",
     "\n",
-    "clf = tree.DecisionTreeClassifier()\n",
+    "clf1 = tree.DecisionTreeClassifier()\n",
+    "clf2 = tree.DecisionTreeClassifier()\n",
     "\n",
     "# 3. fit \n",
-    "clf = clf.fit(X, Y)"
+    "clf1 = clf1.fit(x1, y1)\n",
+    "\n",
+    "clf2 = clf2.fit(x2, y2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +278,7 @@
      "output_type": "stream",
      "text": [
       "[0 1 1 ... 0 1 1]\n",
-      "0.5468725936681847\n"
+      "0.5464765802037269\n"
      ]
     }
    ],
@@ -280,6 +288,18 @@
     "accuracy = np.count_nonzero(prediction == testing_data['fg3'])/prediction.size\n",
     "print(accuracy)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import graphviz \n",
+    "dot_data = tree.export_graphviz(clf, out_file=None)\n",
+    "graph = graphviz.Source(dot_data)\n",
+    "graph.render(\"iris\") "
+   ]
   }
  ],
  "metadata": {
@@ -287,6 +307,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
