--- a/Decision Tree.ipynb
+++ b/Decision Tree.ipynb
@@ -295,16 +295,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import graphviz \n",
-    "dot_data = tree.export_graphviz(clf, out_file=None)\n",
-    "graph = graphviz.Source(dot_data)\n",
-    "graph.render(\"iris\") "
+    "players = dataset.player.unique()\n",
+    "df = pd.DataFrame()\n",
+    "THRESHOLD = 50 # minimum predicted number of shots to be considered\n",
+    "df['player_name'] = []\n",
+    "df['predicted_number_made'] = []\n",
+    "df['actual_number_made'] = []\n",
+    "df['percent_difference'] = []\n",
+    "df['fg%'] = []\n",
+    "for player in players:\n",
+    "    player_shots = testing_data[testing_data['player'] == player]\n",
+    "    if(len(player_shots) > THRESHOLD):\n",
+    "        player_predicted = clf.predict(player_shots.loc[:, feature_cols])\n",
+    "        player_actual = player_shots['fg3']\n",
+    "        predicted_total = np.sum(player_predicted)\n",
+    "        actual_total = np.sum(player_actual)\n",
+    "        df = df.append({'player_name' : player, 'predicted_number_made' : \n",
+    "                        predicted_total, 'actual_number_made' : actual_total, \n",
+    "                        'percent_difference': (actual_total - predicted_total)/predicted_total, \n",
+    "                        'fg%' : actual_total/len(player_shots) }, ignore_index = True)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -318,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
