--- a/Decision Tree-Copy1.ipynb
+++ b/Decision Tree-Copy1.ipynb
@@ -2,9 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['catchAndShoot' 'catchAndShootRelocating' 'stepback' 'shakeAndRaise'\n",
+      " 'catchAndShootOnMoveLeft' 'pullupJumper' 'overScreen'\n",
+      " 'catchAndShootOnMoveRight' 'heave' 'drivingFloater' 'cutFloater' 'tip'\n",
+      " 'lob' 'cutLayup' 'standstillLayup' 'postLeft' 'drivingLayup']\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-2b3e26f48f11>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mshotTypes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcomplexShotType\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshotTypes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;32mnot\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'complexShotType'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'heave'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'drivingFloater'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'cutFloater'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'tip'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'lob'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'cutLayup'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'standstillLayup'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'postLeft'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'drivingLayup'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mshotIds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshotTypes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1325\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1326\u001b[0m         raise ValueError(\n\u001b[0;32m-> 1327\u001b[0;31m             \u001b[0;34mf\"The truth value of a {type(self).__name__} is ambiguous. \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1328\u001b[0m             \u001b[0;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1329\u001b[0m         )\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -14,14 +37,22 @@
     "dataset = pd.read_csv(r'hackathon_basketball_distribution.csv')\n",
     "\n",
     "shotTypes = dataset.complexShotType.unique()\n",
+    "print(shotTypes)\n",
+    "\n",
+    "ignoredShots = ['heave', 'drivingFloater', 'cutFloater', 'tip', 'lob', 'cutLayup', 'standstillLayup', 'postLeft', 'drivingLayup']\n",
+    "for shot in ignoredShot:\n",
+    "    dataset = dataset[not dataset['complexShotType'] in ]\n",
+    "\n",
     "shotIds = [i for i in range(len(shotTypes))]\n",
+    "\n",
+    "\n",
     "\n",
     "dataset['complexShotType'].replace(shotTypes, shotIds, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +257,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,10 +270,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#feature_cols = ['startGameClock', 'shotClock', 'distance', 'dribblesBefore', 'assistOpp', 'complexShotType', 'closestDefDist', 'rearViewContest', 'shotAngle', 'shooterSpeed', 'shooterVelAngle']\n",
     "feature_cols = ['startGameClock', 'shotClock', 'distance', 'dribblesBefore', 'assistOpp', 'complexShotType', 'closestDefDist', 'rearViewContest', 'shotAngle', 'shooterSpeed', 'shooterVelAngle']\n",
     "X = [df1.loc[:, feature_cols], df2.loc[:, feature_cols]]\n",
     "\n",
@@ -251,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,15 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For Model 1 37.6496057448606% of the 3 pointers were made league wide.\n",
-      "For Model 2 36.78893269501549% of the 3 pointers were made league wide.\n"
+      "For Model 1 36.7484511405238% of the 3 pointers were made league wide.\n",
+      "For Model 2 36.914777527457055% of the 3 pointers were made league wide.\n",
+      "0.36831614333990426\n",
+      "0.3587589763446916\n"
      ]
     }
    ],
@@ -292,7 +326,14 @@
     "for i in range(len(clfs)):\n",
     "    predictions[i] = clfs[i].predict(X[(i+1)%2])\n",
     "    fg3Total = np.sum(predictions[i])/predictions[i].size*100\n",
-    "    print(\"For Model \" + str(i + 1) + \" \" + str(fg3Total) + \"% of the 3 pointers were made league wide.\")"
+    "    print(\"For Model \" + str(i + 1) + \" \" + str(fg3Total) + \"% of the 3 pointers were made league wide.\")\n",
+    "    \n",
+    "if \"Prediction\" in dataset:\n",
+    "    dataset[\"Prediction\"] = np.concatenate((predictions[1], predictions[0]), axis=None)\n",
+    "else:\n",
+    "    dataset.insert(4, \"Prediction\", np.concatenate((predictions[1], predictions[0]), axis=None))\n",
+    "print(np.mean(dataset[\"Prediction\"]))\n",
+    "print(np.mean(dataset[\"fg3\"]))"
    ]
   },
   {
@@ -1104,7 +1145,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1118,7 +1159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
